<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Coop</string>
    <string name="action_logout">Exit &amp; Log Out</string>
    <string name="action_main">Main Activity</string>
    <string name="action_login">Login Activity</string>
    <string name="action_photovideo">Photo/Video Activity</string>
    <string name="action_journal">Journal Activity</string>
    <string name="action_people">People Activity</string>
    <string name="action_assignments">Assignments Activity</string>
    <string name="title_section1">Photo Video</string>
    <string name="title_section2">Journal</string>
    <string name="title_section3">People</string>
    <string name="title_section4">Assignments</string>
    <string name="action_viewpager">View Pager</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_login">Login</string>

</resources>
